--- a/dicee.html
+++ b/dicee.html
@@ -24,11 +24,11 @@
 
     </div>
 
-    <script src="index.js" charset="utf-8"></script>
+    <script src="/index.js" charset="utf-8"></script>
 
       </body>
 
       <footer>
-        www 🎲 App Brewery 🎲 com
+        www 🎲 Dice-Game 🎲 com
       </footer>
     </html>
